WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107234
[mac] DumpRenderTree/WebKitTestRunner should not participate in exposé/Mission Control
https://bugs.webkit.org/show_bug.cgi?id=107234
Summary
[mac] DumpRenderTree/WebKitTestRunner should not participate in exposé/Missio...
Tim Horton
Reported
2013-01-18 00:06:26 PST
I really don't think we need dozens of offscreen WKTR windows showing up in exposé. I think we can just use NSWindowCollectionBehaviorStationary.
Attachments
patch
(1.43 KB, patch)
2013-01-18 00:18 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
plus drt
(2.24 KB, patch)
2013-01-18 00:21 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-01-18 00:18:14 PST
Created
attachment 183392
[details]
patch
Tim Horton
Comment 2
2013-01-18 00:18:59 PST
Oh, hey, DRT needs the same thing.
Tim Horton
Comment 3
2013-01-18 00:21:37 PST
Created
attachment 183393
[details]
plus drt
Tim Horton
Comment 4
2013-01-18 11:35:44 PST
http://trac.webkit.org/changeset/140189
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug