[mac] DumpRenderTree/WebKitTestRunner should not participate in Exposé/Mission Control https://bugs.webkit.org/show_bug.cgi?id=107234

Reviewed by Simon Fraser.

* DumpRenderTree/mac/DumpRenderTree.mm:
(createWebViewAndOffscreenWindow): Disable participation in Exposé via NSWindowCollectionBehaviorStationary.
* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::PlatformWebView): Ditto.


Canonical link: https://commits.webkit.org/125544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140189 268f45cc-cd09-0410-ab3c-d52691b4dbfc